--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.test.summerpractice22">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,11 +16,7 @@
         android:theme="@style/Theme.SummerPractice22"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".SplashActivity"
+            android:name=".second.MainActivity"
             android:exported="true">
 
             <intent-filter>
@@ -29,6 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".first.SplashActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
